# emtoflow

./: .gitignore  ALLOY_IMPLEMENTATION_PLAN.md  ALLOY_LOOP_USAGE.md  ALLOY_WORKFLOW_GUIDE.md  Cu0_Mg100.yaml  Cu2Mg_laves.yaml  CuMg_fcc.yaml  CuMg_fcc_loop_example.yaml  CuMg_hcp.yaml  DOS_REFACTOR_PLAN.md  FAST_DMAX_OPTIMIZATION.md  INSTALL.md  LATTICE_TYPES.md  LICENSE  OPTIMIZATION_WORKFLOW_PLAN.md  README.md  REFACTORING_PLAN.md  WORKFLOW_GUIDE.md  analyze_out_of_range.py  code.ipynb  env.yaml  environment.yml  kstr_to_yaml_config.yaml  linear_fit_energy_zero.py  optimization_config_template.yaml  out  predict_symmetric_fit.py  pyproject.toml  requirements.txt  test.yaml  test_cpa_fix.py  test_dmax_workflow.py  test_dos_plotting.py  test_dos_plotting_simple.py  test_expansion_cu0_mg100.py  test_fast_dmax_extraction.py  test_file_organization.py  test_kstr_validation.py  test_morse_estimation.py  test_paramagnetic_dos.py  (+7 more)
Cu0_Mg100/: workflow_results.json  workflow_summary.txt
Cu100_Mg0/: workflow_results.json  workflow_summary.txt
code-tests/: test_cif_extraction.py  test_complete_workflow.py  test_dmax_workflow.py  test_fast_dmax_extraction.py  test_file_organization.py  test_full_optimization.py  test_generate_percentages.py  test_kstr_direct.py  test_optimization_workflow.py  test_prn_monitoring.py  test_workflow.py
deprecated_scripts/: eos.py  eos_fortran_implementation.py  skr_input.py
docs/: ALLOY_COMPOSITION_LOOPS.md  AUTOMATIC_PARAMETER_ESTIMATION.md  CIF_SUBSTITUTIONS.md  DEVELOPMENT_GUIDELINES.md  DMAX_OPTIMIZATION.md  DMAX_OPTIMIZER_ANALYSIS.md  (+15 more)
(+745 files in other folders)
